# shared-skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  shared-skills-features.json  shared-skills-trust-model.excalidraw
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: reviewer.md  run-agent.md
.claude/commands/: checkin.md  plan-n-park.md  push-skills.md  reflect.md  run-agent.md  sync-all.md
.claude/plans/: JOB-SKILL.md  claude-progress.txt  ppt-creator-features.json  ppt-creator.md  pptx-report-skill-addendum.md  pptx-report-skill-handoff.md  shared-skills-setup-guide.md  validation-hooks-features.json  validation-hooks.md
.claude/plans/archive/: SKILL-DISCOVERY.md  digram-research.md  migrate-to-adddir.md  shared-skills-features.json  shared-skills-setup-guide.md  shared-skills.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/excalidraw-diagram/: SKILL.md
.claude/skills/library-management/: SKILL.md
.claude/skills/mermaid-diagram/: SKILL.md
.claude/skills/plugin-builder/: SKILL.md
.claude/skills/ppt-create/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.claude/skills/story-present/: README.md  SKILL.md
.claude/skills/systematic-debugging/: SKILL.md
.claude/skills/tdd-writing/: SKILL.md  (+1 more)
evals/: mermaid-trigger-eval.json
scripts/: push-shared-skills.sh  verify-shared-skills.sh
skills/excalidraw-diagram/: SKILL.md
skills/mermaid-diagram/: SKILL.md
template/: SKILL.md
tools/library_management/: run.py
tools/memory/: __init__.py  run.py
tools/outlook/: run.py
variants/: README.md
(+104 files in other folders)
