[tool.poetry]
name = "shared-skills"
version = "0.1.0"
description = "Shared Claude Code skills, commands, and library management tools"
packages = [{include = "tools"}]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.scripts]
library-status = "tools.library_management.run:status"
library-setup = "tools.library_management.run:setup"
library-verify = "tools.library_management.run:verify"
library-push = "tools.library_management.run:push"
library-sync = "tools.library_management.run:sync"
library-list = "tools.library_management.run:list_skills"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
