[tool.poetry]
name = "shared-skills"
version = "0.1.0"
description = "Shared Claude Code skills, commands, and library management tools"
packages = [{include = "tools"}]

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
